Project02.Parser/MicroParser.py
# Generated from Micro.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MicroParser ( Parser ):

    grammarFileName = "Micro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'", 
                     "':='", "';'", "'FLOAT'", "'INT'", "'VOID'", "','", 
                     "'FUNCTION'", "'('", "')'", "'READ'", "'WRITE'", "'RETURN'", 
                     "'+'", "'-'", "'*'", "'/'", "'IF'", "'FI'", "'ELSE'", 
                     "'<'", "'>'", "'='", "'!='", "'<='", "'>='", "'FOR'", 
                     "'ROF'", "'CONTINUE'", "'BREAK'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INTLITERAL", "FLOATLITERAL", 
                      "KEYWORD", "IDENTIFIER", "QUOTE", "STRINGLITERAL", 
                      "OPERATOR", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_id = 1
    RULE_pgm_body = 2
    RULE_decl = 3
    RULE_string_decl = 4
    RULE_str = 5
    RULE_var_decl = 6
    RULE_var_type = 7
    RULE_any_type = 8
    RULE_id_list = 9
    RULE_id_tail = 10
    RULE_param_decl_list = 11
    RULE_param_decl = 12
    RULE_param_decl_tail = 13
    RULE_func_declarations = 14
    RULE_func_decl = 15
    RULE_func_body = 16
    RULE_stmt_list = 17
    RULE_stmt = 18
    RULE_base_stmt = 19
    RULE_assign_stmt = 20
    RULE_assign_expr = 21
    RULE_read_stmt = 22
    RULE_write_stmt = 23
    RULE_return_stmt = 24
    RULE_expr = 25
    RULE_expr_prefix = 26
    RULE_factor = 27
    RULE_factor_prefix = 28
    RULE_postfix_expr = 29
    RULE_call_expr = 30
    RULE_expr_list = 31
    RULE_expr_list_tail = 32
    RULE_primary = 33
    RULE_addop = 34
    RULE_mulop = 35
    RULE_if_stmt = 36
    RULE_else_part = 37
    RULE_cond = 38
    RULE_compop = 39
    RULE_init_stmt = 40
    RULE_incr_stmt = 41
    RULE_for_stmt = 42
    RULE_aug_stmt_list = 43
    RULE_aug_stmt = 44
    RULE_aug_if_stmt = 45
    RULE_aug_else_part = 46

    ruleNames =  [ "program", "id", "pgm_body", "decl", "string_decl", "str", 
                   "var_decl", "var_type", "any_type", "id_list", "id_tail", 
                   "param_decl_list", "param_decl", "param_decl_tail", "func_declarations", 
                   "func_decl", "func_body", "stmt_list", "stmt", "base_stmt", 
                   "assign_stmt", "assign_expr", "read_stmt", "write_stmt", 
                   "return_stmt", "expr", "expr_prefix", "factor", "factor_prefix", 
                   "postfix_expr", "call_expr", "expr_list", "expr_list_tail", 
                   "primary", "addop", "mulop", "if_stmt", "else_part", 
                   "cond", "compop", "init_stmt", "incr_stmt", "for_stmt", 
                   "aug_stmt_list", "aug_stmt", "aug_if_stmt", "aug_else_part" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    INTLITERAL=34
    FLOATLITERAL=35
    KEYWORD=36
    IDENTIFIER=37
    QUOTE=38
    STRINGLITERAL=39
    OPERATOR=40
    COMMENT=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def pgm_body(self):
            return self.getTypedRuleContext(MicroParser.Pgm_bodyContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MicroParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MicroParser.T__0)
            self.state = 95
            self.id_()
            self.state = 96
            self.match(MicroParser.T__1)
            self.state = 97
            self.pgm_body()
            self.state = 98
            self.match(MicroParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MicroParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MicroParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)




    def id_(self):

        localctx = MicroParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MicroParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pgm_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MicroParser.DeclContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(MicroParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_pgm_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPgm_body" ):
                listener.enterPgm_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPgm_body" ):
                listener.exitPgm_body(self)




    def pgm_body(self):

        localctx = MicroParser.Pgm_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pgm_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decl()
            self.state = 103
            self.func_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_decl(self):
            return self.getTypedRuleContext(MicroParser.String_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(MicroParser.DeclContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MicroParser.Var_declContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = MicroParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.string_decl()
                self.state = 106
                self.decl()
                pass
            elif token in [MicroParser.T__6, MicroParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.var_decl()
                self.state = 109
                self.decl()
                pass
            elif token in [MicroParser.T__2, MicroParser.T__10, MicroParser.T__13, MicroParser.T__14, MicroParser.T__15, MicroParser.T__20, MicroParser.T__21, MicroParser.T__22, MicroParser.T__29, MicroParser.T__30, MicroParser.T__31, MicroParser.T__32, MicroParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def str_(self):
            return self.getTypedRuleContext(MicroParser.StrContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_string_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_decl" ):
                listener.enterString_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_decl" ):
                listener.exitString_decl(self)




    def string_decl(self):

        localctx = MicroParser.String_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_string_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MicroParser.T__3)
            self.state = 115
            self.id_()
            self.state = 116
            self.match(MicroParser.T__4)
            self.state = 117
            self.str_()
            self.state = 118
            self.match(MicroParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLITERAL(self):
            return self.getToken(MicroParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return MicroParser.RULE_str

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr" ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr" ):
                listener.exitStr(self)




    def str_(self):

        localctx = MicroParser.StrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_str)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MicroParser.STRINGLITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(MicroParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(MicroParser.Id_listContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = MicroParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.var_type()
            self.state = 123
            self.id_list()
            self.state = 124
            self.match(MicroParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MicroParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = MicroParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not(_la==MicroParser.T__6 or _la==MicroParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Any_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(MicroParser.Var_typeContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_any_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_type" ):
                listener.enterAny_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_type" ):
                listener.exitAny_type(self)




    def any_type(self):

        localctx = MicroParser.Any_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_any_type)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__6, MicroParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.var_type()
                pass
            elif token in [MicroParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(MicroParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def id_tail(self):
            return self.getTypedRuleContext(MicroParser.Id_tailContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = MicroParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.id_()
            self.state = 133
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def id_tail(self):
            return self.getTypedRuleContext(MicroParser.Id_tailContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_id_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tail" ):
                listener.enterId_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tail" ):
                listener.exitId_tail(self)




    def id_tail(self):

        localctx = MicroParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_tail)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(MicroParser.T__9)
                self.state = 136
                self.id_()
                self.state = 137
                self.id_tail()
                pass
            elif token in [MicroParser.T__5, MicroParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(MicroParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(MicroParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_param_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_list" ):
                listener.enterParam_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_list" ):
                listener.exitParam_decl_list(self)




    def param_decl_list(self):

        localctx = MicroParser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_decl_list)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__6, MicroParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.param_decl()
                self.state = 143
                self.param_decl_tail()
                pass
            elif token in [MicroParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(MicroParser.Var_typeContext,0)


        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)




    def param_decl(self):

        localctx = MicroParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.var_type()
            self.state = 149
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(MicroParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(MicroParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_param_decl_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_tail" ):
                listener.enterParam_decl_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_tail" ):
                listener.exitParam_decl_tail(self)




    def param_decl_tail(self):

        localctx = MicroParser.Param_decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param_decl_tail)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MicroParser.T__9)
                self.state = 152
                self.param_decl()
                self.state = 153
                self.param_decl_tail()
                pass
            elif token in [MicroParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(MicroParser.Func_declContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(MicroParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_func_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declarations" ):
                listener.enterFunc_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declarations" ):
                listener.exitFunc_declarations(self)




    def func_declarations(self):

        localctx = MicroParser.Func_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_declarations)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MicroParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.func_decl()
                self.state = 159
                self.func_declarations()
                pass
            elif token in [MicroParser.T__2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_type(self):
            return self.getTypedRuleContext(MicroParser.Any_typeContext,0)


        def id_(self):
            return self.getTypedRuleContext(MicroParser.IdContext,0)


        def param_decl_list(self):
            return self.getTypedRuleContext(MicroParser.Param_decl_listContext,0)


        def func_body(self):
            return self.getTypedRuleContext(MicroParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = MicroParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MicroParser.T__10)
            self.state = 165
            self.any_type()
            self.state = 166
            self.id_()
            self.state = 167
            self.match(MicroParser.T__11)
            self.state = 168
            self.param_decl_list()
            self.state = 169
            self.match(MicroParser.T__12)
            self.state = 170
            self.match(MicroParser.T__1)
            self.state = 171
            self.func_body()
            self.state = 172
            self.match(MicroParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MicroParser.DeclContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(MicroParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MicroParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)




    def func_body(self):

        localctx = MicroParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.decl()
            self.state = 175
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MicroParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(MicroParser.Stmt_listContext,0)

